--- a/app/src/main/res/layout/dialog_form.xml
+++ b/app/src/main/res/layout/dialog_form.xml
@@ -17,169 +17,214 @@
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="310dp"
         android:background="@drawable/user_cl_bg_white_radius_bot"
-        android:columnCount="4"
+        android:orientation="vertical"
         android:padding="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tv_form_select"
-        app:layout_constraintTop_toBottomOf="@id/tv_form_select">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_form_select">
 
-        <ImageView
-            android:id="@+id/medicine_type_1"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/medicine_type_2"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_2" />
+            <ImageView
+                android:id="@+id/medicine_type_1"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_1"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_3"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_3" />
+            <ImageView
+                android:id="@+id/medicine_type_2"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_2"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_4"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_4" />
+            <ImageView
+                android:id="@+id/medicine_type_3"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_3"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_5"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_5" />
+            <ImageView
+                android:id="@+id/medicine_type_4"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_4"
+                android:scaleType="fitCenter" />
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/medicine_type_6"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_6" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/medicine_type_7"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_7" />
+            <ImageView
+                android:id="@+id/medicine_type_5"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_5"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_8"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_8" />
+            <ImageView
+                android:id="@+id/medicine_type_6"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_6"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_9"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_9" />
+            <ImageView
+                android:id="@+id/medicine_type_7"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_7"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_10"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_10" />
+            <ImageView
+                android:id="@+id/medicine_type_8"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_8"
+                android:scaleType="fitCenter" />
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/medicine_type_11"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_11" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/medicine_type_12"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_12" />
+            <ImageView
+                android:id="@+id/medicine_type_9"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_9"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_13"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_13" />
+            <ImageView
+                android:id="@+id/medicine_type_10"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_10"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_14"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_14" />
+            <ImageView
+                android:id="@+id/medicine_type_11"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_11"
+                android:scaleType="fitCenter" />
 
-        <ImageView
-            android:id="@+id/medicine_type_15"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:scaleType="fitCenter"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="4dp"
-            android:background="@drawable/medicine_type_15" />
-    </GridLayout>
+            <ImageView
+                android:id="@+id/medicine_type_12"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_12"
+                android:scaleType="fitCenter" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/medicine_type_13"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_13"
+                android:scaleType="fitCenter" />
+
+            <ImageView
+                android:id="@+id/medicine_type_14"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_14"
+                android:scaleType="fitCenter" />
+
+            <ImageView
+                android:id="@+id/medicine_type_15"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/medicine_type_15"
+                android:scaleType="fitCenter" />
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="4dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
