--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,10 +49,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
+        android:clickable="true"
         android:background="@color/transparent_gray"
 
         android:translationZ="10dp"
-        android:visibility="gone"
+        android:visibility="visible"
         >
 
         <ProgressBar
