--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -96,22 +96,13 @@
 
 <!-- 칩 관련 스타일   -->
 
-    <style name="CustomChipStyle_On" parent="Widget.MaterialComponents.Chip.Filter">
-        <item name="chipBackgroundColor">@color/any_200</item>
+    <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/white</item>
         <item name="android:textColor">@color/black</item>
-        <item name="chipMinHeight">32dp</item>
+        <item name="chipMinHeight">40dp</item>
         <item name="chipIconVisible">false</item>
-        <item name="closeIconVisible">false</item>
-        <item name="checkedIconVisible">true</item>
-
-        <item name="chipSpacing">4dp</item>
-    </style>
-    <style name="CustomChipStyle_Off" parent="Widget.MaterialComponents.Chip.Filter">
-        <item name="chipBackgroundColor">@color/back_500</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="chipMinHeight">32dp</item>
-        <item name="chipIconVisible">false</item>
-        <item name="closeIconVisible">false</item>
+        <item name="closeIconVisible">true</item>
+        <item name="closeIconTint">@color/gray</item>
         <item name="checkedIconVisible">false</item>
     </style>
 
