--- a/app/src/main/res/drawable/taken_checkbox_selector.xml
+++ b/app/src/main/res/drawable/taken_checkbox_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true">
+    <item android:state_selected="true">
         <layer-list>
             <item android:drawable="@drawable/taken_checkbox_on" />
             <item android:drawable="@drawable/check_img"
@@ -12,7 +12,7 @@
         </layer-list>
     </item>
 
-    <item android:state_checked="false">
+    <item android:state_selected="false">
         <layer-list>
             <!-- 배경 -->
             <item android:drawable="@drawable/taken_checkbox_off" />
