--- a/app/src/main/res/layout/fragment_cycle.xml
+++ b/app/src/main/res/layout/fragment_cycle.xml
@@ -87,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/cl_start_day">
 
         <TextView
