--- a/app/src/main/res/layout/fragment_ocr.xml
+++ b/app/src/main/res/layout/fragment_ocr.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     tools:context=".ui.textrecognition.OcrFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,37 +14,98 @@
         <androidx.camera.view.PreviewView
             android:id="@+id/viewFinder"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
 
-        <com.blackcows.butakaeyak.ui.textrecognition.GraphicOverlay
-            android:id="@+id/graphic_overlay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="@id/viewFinder"
-            app:layout_constraintBottom_toBottomOf="@id/viewFinder"
-            app:layout_constraintLeft_toLeftOf="@id/viewFinder"
-            app:layout_constraintRight_toRightOf="@id/viewFinder"
-            android:layout_alignParentStart="true" />
+            <com.blackcows.butakaeyak.ui.textrecognition.GraphicOverlay
+                android:id="@+id/graphic_overlay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true" />
+        </androidx.camera.view.PreviewView>
 
-        <Button
+        <TextView
+            android:id="@+id/textViewOcrResult"
+            style="@style/headline_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="진단서 혹은 약봉투\n인식해 주세요"
+            android:textAlignment="center"
+
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/camera_guide_RB"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/camera_guide_LT" />
+
+        <ImageView
+            android:id="@+id/camera_guide_LT"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="150dp"
+            android:src="@drawable/camera_guide"
+            app:layout_constraintBottom_toTopOf="@+id/Horizontal_centerline"
+            app:layout_constraintEnd_toStartOf="@+id/vertical_centerline"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/camera_guide_RT"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginBottom="150dp"
+            android:rotation="90"
+            android:src="@drawable/camera_guide"
+            app:layout_constraintBottom_toTopOf="@+id/Horizontal_centerline"
+            app:layout_constraintStart_toStartOf="@+id/vertical_centerline"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/camera_guide_RB"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="150dp"
+            android:rotation="180"
+            android:src="@drawable/camera_guide"
+            app:layout_constraintTop_toTopOf="@+id/Horizontal_centerline"
+            app:layout_constraintStart_toStartOf="@+id/vertical_centerline"/>
+
+        <ImageView
+            android:id="@+id/camera_guide_LB"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginTop="150dp"
+            android:rotation="270"
+            android:src="@drawable/camera_guide"
+            app:layout_constraintTop_toTopOf="@+id/Horizontal_centerline"
+            app:layout_constraintEnd_toStartOf="@+id/vertical_centerline"/>
+
+        <ImageButton
             android:id="@+id/take_photo_btn"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:elevation="2dp"
             android:layout_marginBottom="24dp"
-            android:text="사진\n찍기"
+            android:src="@drawable/btn_camera"
+            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/select_photo_btn"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:elevation="2dp"
-            android:text="사진\n선택"
+            android:src="@drawable/btn_gallery"
+            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -54,24 +116,29 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent=".50" />
 
-        <TextView
-            android:id="@+id/textViewOcrResult"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/Horizontal_centerline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OCR Result"
-            android:textSize="16sp"
-            android:padding="16dp"
-            android:background="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent=".50" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loding_Progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone">
         <ProgressBar
-            android:id="@+id/lodingProgress"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"/>
-
+            android:scaleX=".2"
+            android:scaleY=".2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
